[package]
name = "axum-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["http1", "tokio"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "ansi"] }
